# preframr-aug

./: IMPLEMENTATION.md  README.md  STATUS.md  pyproject.toml  pyrightconfig.json  run_tests.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
preframr_aug/: __init__.py  cli.py  provenance.py  reduce.py  sonic.py  transplant.py  voices.py  writes.py
tests/: audio_render.py  sid_fixtures.py  test_augmentation_audio.py  test_cli.py  test_leakage.py  test_lint.py  test_reduce.py  test_roundtrip.py  test_sonic.py  test_splice.py
