[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "preframr-aug"
description = "Write-domain corpus augmentation for the preframr event model (reduction + transplant)."
readme = "IMPLEMENTATION.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Anarkiwi"}]
keywords = ["sid", "c64", "preframr", "augmentation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2",
    "pyarrow>=14",
    "preframr-tokens>=0.51.0",
    "preframr-audio>=0.5.9",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "pylint>=3",
    "pyright>=1.1.350",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.5",
]

[project.scripts]
preframr-aug = "preframr_aug.cli:main"

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
include = ["preframr_aug*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "cell-var-from-loop",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
    "unused-import",
    "unused-variable",
]

[tool.coverage.run]
omit = ["preframr_aug/cli.py"]
